# personalCPA

./: .gitignore  CONTEXT.md  GEMINI.md  PLAN.md  README.md  SUMMARY.md  cli.py  cpa.db  install_llm.sh  main.py  pyproject.toml
cpa_core/: db.py  health.py  ingest.py  intelligence.py  knowledge_base.py  watcher.py
docs/adr/: 0001-architectural-deepening-candidates.md
docs/agents/: domain.md  issue-tracker.md  triage-labels.md
eval/: evaluator.py  gold_standard.json
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: ActionInbox.tsx  Assistant.tsx  Dashboard.tsx  Header.tsx  HealthCheck.tsx  KnowledgeBase.tsx  MetricCard.tsx  TransactionTable.tsx
frontend/src/lib/: api.ts
gemini-skills/: README.md
gemini-skills/engineering/setup-matt-pocock-skills/: SKILL.md
scripts/: download_model.py  ingest_docs.py
test_data/: sample.csv
tests/: test_categorization.py  test_db.py  test_embeddings.py  test_ingest.py  test_ingest_flexibility.py  test_intelligence.py  test_knowledge_base.py  test_main.py  test_vector_db.py
