[project]
name = "personalcpa"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.136.1",
    "httpx>=0.28.1",
    "pydantic>=2.13.3",
    "python-multipart>=0.0.27",
    "rich>=15.0.0",
    "sqlite-vss>=0.1.2",
    "typer>=0.25.1",
    "uvicorn[standard]>=0.46.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
