[project]
name = "personalcpa"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "fastapi>=0.136.1",
    "fastembed>=0.8.0",
    "httpx>=0.28.1",
    "langchain-text-splitters>=1.1.2",
    "pydantic>=2.13.3",
    "pypdf>=6.10.2",
    "python-multipart>=0.0.27",
    "requests>=2.33.1",
    "rich>=15.0.0",
    "sqlite-vss>=0.1.2",
    "tqdm>=4.67.3",
    "typer>=0.25.1",
    "uvicorn[standard]>=0.46.0",
    "watchdog>=6.0.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
